# libosdp-rs

./: .gitmodules
.github/workflows/: publish-libosdp.yml
libosdp/: Cargo.toml
libosdp-sys/: Cargo.toml  build.rs
libosdp/src/: cp.rs  events.rs  file.rs  lib.rs  pd.rs
libosdp/tests/: file_transfer.rs
libosdp/tests/common/: memory_channel.rs
osdpctl/: Cargo.toml
osdpctl/src/: config.rs
